plataforma/argocd/argocd-platform-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: argocd-platform
  name: argocd-platform
