plataforma/argocd/cd-platform-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: cd-platform
  name: cd-platform
