plataforma/argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd-platform
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
    paths:
    - path: /argocd
      pathType: Prefix
      backend:
        service:
          name: argocd-server
          port:
            number: 8080

# - host: minilab.local
